Add MyTRIM submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contrib/spparks"]
 	path = contrib/spparks
 	url = https://hpcgitlab.inl.gov/schwd/spparks.git
+[submodule "contrib/mytrim"]
+	path = contrib/mytrim
+	url = http://github.com/dschwen/3DTRIM.git
