--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contrib/mytrim"]
 	path = contrib/mytrim
 	url = https://github.com/idaholab/mytrim.git
+[submodule "contrib/gsl"]
+	path = contrib/gsl
+	url = https://github.com/dschwen/gsl.git
