Fix unit tests (#446)

--- a/unit/Makefile
+++ b/unit/Makefile
@@ -19,7 +19,7 @@ include $(FRAMEWORK_DIR)/build.mk
 include $(FRAMEWORK_DIR)/moose.mk
 
 ################################## MODULES ####################################
-ALL_MODULES := no
+PHASE_FIELD        := yes
 include           $(MOOSE_DIR)/modules/modules.mk
 ###############################################################################
 
