Explicit empty vector defaults (#487)

--- a/unit/Makefile
+++ b/unit/Makefile
@@ -20,6 +20,8 @@ include $(FRAMEWORK_DIR)/moose.mk
 
 ################################## MODULES ####################################
 PHASE_FIELD        := yes
+TENSOR_MECHANICS   := yes
+HEAT_CONDUCTION    := yes
 include           $(MOOSE_DIR)/modules/modules.mk
 ###############################################################################
 
