--- a/unit/Makefile
+++ b/unit/Makefile
@@ -20,7 +20,7 @@ include $(FRAMEWORK_DIR)/moose.mk
 
 ################################## MODULES ####################################
 PHASE_FIELD        := yes
-TENSOR_MECHANICS   := yes
+SOLID_MECHANICS    := yes
 HEAT_CONDUCTION    := yes
 include           $(MOOSE_DIR)/modules/modules.mk
 ###############################################################################
